fixed navbar position and tabs

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,14 @@
+#space{
+    height: 100vh;
+  
+}
+#hello{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+}
 @media screen and (max-width: 1000px) {
     .body{
  
